@startuml

title __EJEMPLOS's Class Diagram__\n

  namespace main.java.Ejemplos {
    class AgentTry {
        # setup()
        # takeDown()
    }
  }
  

  namespace main.java.Ejemplos {
    class ContadorExternoBehaviour {
        - agent : Agent
        - contador : int
        + ContadorExternoBehaviour()
        + action()
        + done()
        + onStart()
    }
  }
  

  namespace main.java.Ejemplos {
    class ContadorExternoCyclicBehaviour {
        - agent : Agent
        - contador : int
        + ContadorExternoCyclicBehaviour()
        + action()
        + onStart()
    }
  }
  

  AgentTry -up-|> jade.core.Agent
  ContadorExternoBehaviour -up-|> jade.core.behaviours.Behaviour
  ContadorExternoCyclicBehaviour -up-|> jade.core.behaviours.CyclicBehaviour


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
